--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "coffeescript": "1.12.7",
     "prop-types": "^15.6.1",
     "react": "^16.8.4",
-    "react-dom": "^16.8.4"
+    "react-dom": "^16.8.4",
+    "reactstrap": "^8.0.1"
   },
   "devDependencies": {
     "@babel/plugin-proposal-class-properties": "^7.4.0",
@@ -28,6 +29,7 @@
     "mocha": "^5.2.0",
     "react-test-renderer": "^16.8.4",
     "sinon": "^6.0.1",
+    "webpack-cli": "^3.3.7",
     "webpack-dev-server": "^3.2.1"
   },
   "scripts": {
